# ichigo-code-challenge

./: Makefile  README.md  docker-compose.yml
apps/api/: .envrc  Dockerfile  database.py  dbseed.py  main.py  pyproject.toml  util.py
apps/api/models/: customer.py  order.py
apps/api/routers/: loyalty.py  order.py
apps/api/tests/: conftest.py
apps/api/tests/loyalty/: test_get_loyalty_information_by_customer.py
apps/api/tests/order/: test_create_order.py  test_list_orders_by_customer_id.py
apps/front/: .envrc  .eslintrc.json  Dockerfile  package.json  tsconfig.json
apps/front/components/: layout.tsx  link.tsx  progressbar.tsx
apps/front/config/: openapi.ts
apps/front/pages/: _document.tsx  index.tsx
apps/front/pages/[id]/: loyalty.tsx  order.tsx
apps/front/styles/: Home.module.css  globals.css
apps/front/styles/components/: DefaultLayout.module.css  ProgressBar.module.css
apps/front/styles/pages/[id]/: Loyalty.module.css  Order.module.css
