[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Lim Chun Leng <limchunleng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
